# advent-of-code

2/src/: main.rs
2022/1/src/: main.rs
2022/5/src/: main.rs
2022/6/src/: main.rs
2022/7/src/: main.rs
2022/8/src/: main.rs
2022/9/src/: main.rs
2023/1/: Cargo.toml
2023/1/src/: main.rs
2023/10/: Cargo.toml
2023/10/src/: main.rs
2023/11/src/: main.rs
2023/12/: Cargo.toml
2023/12/firedbg/: target.json
2023/12/src/: main.rs
2023/13/: Cargo.toml
2023/13/src/: main.rs
2023/2/: Cargo.toml
2023/2/src/: main.rs
2023/3/: Cargo.toml
2023/3/src/: main.rs
2023/4/: Cargo.toml
2023/4/src/: main.rs
2023/5/src/: main.rs
2023/6/: Cargo.toml
2023/6/src/: main.rs
2023/7/: Cargo.toml
2023/7/src/: main.rs
2023/8/: Cargo.toml
2023/8/src/: main.rs
2023/9/src/: main.rs
3/src/: main.rs
4/src/: main.rs
5/src/: main.rs
6/src/: main.rs
7/src/: common.rs  fs.rs  main.rs  parsing.rs
8/src/: main.rs
9/src/: main.rs
