[package]
name = "day-8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
rayon = "1.8.0"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }

[dev-dependencies]
test-case = "3.3.1"
